--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
   --background-color-alt: hsl(0, 0%, 100%);
   --primary-color: hsl(217, 21%, 21%);
   --secondary-color: hsl(217, 20%, 51%);
-  --tertiary-color: hsl(217, 35%, 45%);
+  --tertiary-color: hsl(218, 35%, 45%);
   --gray-color: hsla(218, 35%, 45%, 0.5);
 }
 
@@ -47,8 +47,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-  margin-bottom: 32px;
+  margin-bottom: 20px;
 }
 
 .app-name {
@@ -65,7 +64,7 @@ body {
 }
 
 .theme-text {
-  font-size: 14px;
+  font-size: 13px;
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 3px;
@@ -77,11 +76,6 @@ body {
   border: none;
   cursor: pointer;
   background-color: transparent;
-}
-
-.theme-icon {
-  height: 24px;
-  width: 24px;
 }
 
 /* SEARCH COMPONENT */
@@ -143,7 +137,7 @@ body {
   font-weight: 700;
   background-color: hsl(212, 100%, 50%);
   color: hsl(0, 0%, 100%);
-  padding: 12px 32px;
+  padding: 14px 28px;
   border-radius: 9px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
@@ -211,6 +205,7 @@ body {
 
 .profile-bio {
   font-size: 15px;
+  font-weight: normal;
   color: var(--secondary-color);
   margin-bottom: 32px;
   text-align: left;
@@ -228,7 +223,7 @@ body {
 }
 
 .stat-box .stat-heading {
-  font-size: 14px;
+  font-size: 13px;
   font-weight: normal;
   color: var(--tertiary-color);
 }
@@ -239,23 +234,20 @@ body {
 }
 /* SOCIAL LI */
 .social-links {
-  width: 98%;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 .li {
-  width: 50%;
-  display: flex;
-  align-items: center;
-  margin-bottom: 16px;
+  display: grid;
+  grid-template-columns: 20px 1fr;
+  gap: 16px;
+  padding: 8px;
   color: var(--tertiary-color);
-  gap: 24px;
 }
 
-.li-icon {
-  /* WON'T FILL */
-  fill: hsl(0, 0%, 100%);
+path {
+  fill: var(--tertiary-color);
 }
 
 .li-text {
